--- a/style.css
+++ b/style.css
@@ -26,7 +26,11 @@ html, body {
     width: 10%;
     height: 10%;
 }
-
+p{
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+}
 .invader {
     position: absolute;
     width: 8%;
